pkg/ibmvpc/examples/out/analysis_out/load_balancer_all_vpcs__with_grouping.txt
Endpoint connectivity for VPC lb-vpc
Public Internet (all ranges) => app-alb[LoadBalancer] : All Connections
Public Internet (all ranges) => vsi0-test-sub[10.240.4.4] : All Connections
app-alb[LoadBalancer] => vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] : All Connections
app-alb[LoadBalancer] => vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] : All Connections
service-alb[LoadBalancer] => vsi0-app-sub0[10.240.0.5] : All Connections
service-alb[LoadBalancer] => vsi0-app-sub1[10.240.64.5] : All Connections
vsi0-app-sub0[10.240.0.5] => service-alb[LoadBalancer] : All Connections
vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] => app-alb[LoadBalancer] : All Connections
vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] => vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] : All Connections
vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] => vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] : All Connections
vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] => vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] : All Connections
vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] => vsi0-test-sub[10.240.4.4] : All Connections
vsi0-app-sub1[10.240.64.5] => service-alb[LoadBalancer] : All Connections
vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] => app-alb[LoadBalancer] : All Connections
vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] => vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] : All Connections
vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] => vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] : All Connections
vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] => vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] : All Connections
vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] => vsi0-test-sub[10.240.4.4] : All Connections
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => app-alb[LoadBalancer] : protocol: ICMP,UDP
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => app-alb[LoadBalancer] : protocol: TCP * 
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => service-alb[LoadBalancer] : protocol: ICMP,UDP
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => service-alb[LoadBalancer] : protocol: TCP * 
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] : All Connections
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] : All Connections
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] : All Connections
vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] => vsi0-test-sub[10.240.4.4] : All Connections
vsi0-test-sub[10.240.4.4] => Public Internet (all ranges) : All Connections
vsi0-test-sub[10.240.4.4] => app-alb[LoadBalancer] : protocol: ICMP,UDP
vsi0-test-sub[10.240.4.4] => app-alb[LoadBalancer] : protocol: TCP * 
vsi0-test-sub[10.240.4.4] => service-alb[LoadBalancer] : protocol: ICMP,UDP
vsi0-test-sub[10.240.4.4] => service-alb[LoadBalancer] : protocol: TCP * 
vsi0-test-sub[10.240.4.4] => vsi0-app-sub0[10.240.0.5],vsi1-app-sub0[10.240.0.4] : All Connections
vsi0-test-sub[10.240.4.4] => vsi0-app-sub1[10.240.64.5],vsi1-app-sub1[10.240.64.4] : All Connections
vsi0-test-sub[10.240.4.4] => vsi0-service-sub[10.240.68.5],vsi1-service-sub[10.240.68.4] : All Connections
vsi1-app-sub0[10.240.0.4] => service-alb[LoadBalancer] : protocol: ICMP,UDP
vsi1-app-sub0[10.240.0.4] => service-alb[LoadBalancer] : protocol: TCP * 
vsi1-app-sub1[10.240.64.4] => service-alb[LoadBalancer] : protocol: ICMP,UDP
vsi1-app-sub1[10.240.64.4] => service-alb[LoadBalancer] : protocol: TCP * 

connections are responsive (on TCP) unless marked with *
